k8s/02-k8s-kubeadm/observability/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
